[workspace]
members = ["rust/sdk", "rust/examples/off-chain"]
exclude = [
    "rust/examples/cpi",
    "callback/rust/examples/cpi",
    "callback/rust/sdk",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.26.0"
anchor-spl = "0.26.0"
anchor-client = { version = "0.26.0" }
ed25519-dalek = { version = "1.0.1" }
solana-cli-config = { version = "1.16.27" }
rand = { version = "0.8" }
bs58 = "0.4"
